<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/patient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/hello_first_fragment"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/b_pouch_fullness"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <Button
        android:id="@+id/b_pouch_fullness"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="20dp"
        android:text="@string/pouch_button"
        app:layout_constraintBottom_toTopOf="@+id/b_database"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_database"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="20dp"
        android:text="@string/db_button"
        app:layout_constraintBottom_toTopOf="@+id/b_gen_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_gen_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="40dp"
        android:text="@string/gen_info_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/picture_patient"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/old_guy"
        android:contentDescription="@string/picture_description"
        app:layout_constraintBottom_toTopOf="@+id/b_pouch_fullness"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_name"
        app:layout_constraintVertical_bias="0.1"
        tools:srcCompat="@drawable/old_guy" />

    <TextView
        android:id="@+id/t_important_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/border"
        android:fontFamily="sans-serif-medium"
        android:text="@string/imp_info_string"
        android:textAlignment="center"
        android:textSize="16sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/b_pouch_fullness"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picture_patient"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>